--- a/Python/Pandas/02-DataFrames/Pandas-Demo.ipynb
+++ b/Python/Pandas/02-DataFrames/Pandas-Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/survey_results_public.csv')\n",
-    "schema_df = pd.read_csv('data/survey_results_schema.csv')"
+    "df = pd.read_csv('../data/survey_results_public.csv')\n",
+    "schema_df = pd.read_csv('../data/survey_results_schema.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "4         No  Appropriate in length                        Easy  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,12 +1481,13 @@
     }
    ],
    "source": [
+    "# gets size of df (rows & cols)\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1516,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,6 +1553,7 @@
     }
    ],
    "source": [
+    "# grabs all responses for 'Hobbyist' column\n",
     "df['Hobbyist']"
    ]
   },
@@ -1636,6 +1638,7 @@
     }
    ],
    "source": [
+    "# gets first 3 rows and the columns 'Hobbyist' thru 'Employment' (last value is inclusive) \n",
     "df.loc[0:2, 'Hobbyist':'Employment']"
    ]
   },
@@ -1663,7 +1666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
