--- a/Python/Pandas/02-DataFrames/Snippets.ipynb
+++ b/Python/Pandas/02-DataFrames/Snippets.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "['CoreyMSchafer@gmail.com', 'JaneDoe@email.com', 'JohnDoe@email.com']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# generates dataframe from a dictionary\n",
+    "# keys become the columns & values becomes the rows\n",
     "df = pd.DataFrame(people)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +140,7 @@
        "2   John      Doe        JohnDoe@email.com"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,6 +169,8 @@
     }
    ],
    "source": [
+    "# bracket notation to access the email series object\n",
+    "# generally a safer method of accessing a series (see problem with dot notation below)\n",
     "df['email']"
    ]
   },
@@ -190,12 +194,14 @@
     }
    ],
    "source": [
+    "# dot notation to access the email series object\n",
+    "# if there is a dataframe method named the same as the column being accessed (ie.count) then this notation won't work correctly\n",
     "df.email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -250,12 +256,14 @@
        "2      Doe        JohnDoe@email.com"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# access multiple columns → use bracket notation + pass in a list of the columns\n",
+    "# not that multiple columns are returned this is no longer a series and just a filtered down dataframe\n",
     "df[['last', 'email']]"
    ]
   },
@@ -276,12 +284,78 @@
     }
    ],
    "source": [
+    "# show all columns of dataframe\n",
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Corey</td>\n",
+       "      <td>Schafer</td>\n",
+       "      <td>CoreyMSchafer@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>JaneDoe@email.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first     last                    email\n",
+       "0  Corey  Schafer  CoreyMSchafer@gmail.com\n",
+       "1   Jane      Doe        JaneDoe@email.com"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# access rows by integer location (0 indexed)\n",
+    "#gets first two rows of data\n",
+    "df.iloc[[0,1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -292,13 +366,14 @@
        "Name: email, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.iloc[[0, 1], 2]"
+    "# gets first two rows AND the third column of df\n",
+    "df.iloc[[0,1], 2]"
    ]
   },
   {
@@ -428,6 +503,8 @@
     }
    ],
    "source": [
+    "# loc → searches by \"label\" instead of integers\n",
+    "# the first two rows have labels of 0 and 1 AND the columns desired have labels of 'email' and 'last'\n",
     "df.loc[[0, 1], ['email', 'last']]"
    ]
   },
@@ -455,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
