--- a/Python/Pandas/03-Indexes/Pandas-Demo.ipynb
+++ b/Python/Pandas/03-Indexes/Pandas-Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/survey_results_public.csv', index_col='Respondent')\n",
-    "schema_df = pd.read_csv('data/survey_results_schema.csv', index_col='Column')"
+    "# index_col sets the index to the 'Respondent' col\n",
+    "df = pd.read_csv('../data/survey_results_public.csv', index_col='Respondent')\n",
+    "schema_df = pd.read_csv('../data/survey_results_schema.csv', index_col='Column')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -1064,7 +1065,7 @@
        "5           Appropriate in length                        Easy  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1561,27 +1562,35 @@
        "'How confident are you that your manager knows what they’re doing?'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# setting index to the columns in schema can often make it easier to access each one, and understand what it represents\n",
     "schema_df.loc['MgrIdiot', 'QuestionText']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sorts indexes in alphabetical (asc) order\n",
+    "schema_df.sort_index()\n",
+    "\n",
+    "# sorts indexes in desc order\n",
+    "schema_df.sort_index(ascending=False)\n",
+    "\n",
+    "# sorts indexes in asc order and carries thru/makes permanent\n",
     "schema_df.sort_index(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2056,7 @@
        "YearsCodePro            How many years have you coded professionally (..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2080,7 +2089,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
