--- a/Python/Pandas/03-Indexes/Snippets.ipynb
+++ b/Python/Pandas/03-Indexes/Snippets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "2   John      Doe        JohnDoe@email.com"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "Name: email, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,16 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sets the email as the index\n",
+    "# usually you want to ensure that you are setting your index to a unique value\n",
     "df.set_index('email', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -196,12 +198,13 @@
        "JohnDoe@email.com         John      Doe"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# because inplace was specified above the index changes carry over to future calls to the df\n",
     "df"
    ]
   },
@@ -222,6 +225,7 @@
     }
    ],
    "source": [
+    "# look at the index values\n",
     "df.index"
    ]
   },
@@ -242,6 +246,7 @@
     }
    ],
    "source": [
+    "# since the df is now index by email, an email can be passed in to loc get data for that user\n",
     "df.loc['CoreyMSchafer@gmail.com', 'last']"
    ]
   },
@@ -269,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -328,12 +333,13 @@
        "2        JohnDoe@email.com   John      Doe"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# resets the index and then uses inplace=True to ensure this change carries over to future calls to the df\n",
     "df.reset_index(inplace=True)\n",
     "df"
    ]
@@ -362,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
