adds lesson5 notes

--- a/Python/Pandas/05-Updating-Data/Pandas-Demo.ipynb
+++ b/Python/Pandas/05-Updating-Data/Pandas-Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/survey_results_public.csv', index_col='Respondent')\n",
-    "schema_df = pd.read_csv('data/survey_results_schema.csv', index_col='Column')"
+    "df = pd.read_csv('../data/survey_results_public.csv', index_col='Respondent')\n",
+    "schema_df = pd.read_csv('../data/survey_results_schema.csv', index_col='Column')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -1064,7 +1064,7 @@
        "5           Appropriate in length                        Easy  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,16 +1075,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# renames 'ConvertedComp' column to 'SalaryUSD'\n",
+    "# it's good practice to test change before setting inplace=True\n",
     "df.rename(columns={'ConvertedComp': 'SalaryUSD'}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1107,7 @@
        "Name: SalaryUSD, Length: 88883, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1139,7 @@
        "Name: Hobbyist, Length: 88883, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1169,27 +1171,29 @@
        "Name: Hobbyist, Length: 88883, dtype: bool"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# maps yes & no responses to boolean values\n",
     "df['Hobbyist'].map({'Yes': True, 'No': False})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# there is no inplace setting for map so need to set the new mapped values to the appropriate series in order to carry changes over thru the df\n",
     "df['Hobbyist'] = df['Hobbyist'].map({'Yes': True, 'No': False})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3067,7 +3071,7 @@
        "[88883 rows x 84 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3100,7 +3104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
