adds lesson6 notes

--- a/Python/Pandas/06-Add-Remove-Rows-Columns/Snippets.ipynb
+++ b/Python/Pandas/06-Add-Remove-Rows-Columns/Snippets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "2   John      Doe        JohnDoe@email.com"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,21 +121,24 @@
     }
    ],
    "source": [
+    "# output a series of the 'first' and 'last' name with a space in between\n",
     "df['first'] + ' ' + df['last']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# assigns a new column 'full_name' in the dataframe\n",
+    "# have to use brackets to assign a new column name\n",
     "df['full_name'] = df['first'] + ' ' + df['last']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +201,7 @@
        "2   John      Doe        JohnDoe@email.com       John Doe"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,16 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use drop() method to remove columns from dataframe\n",
     "df.drop(columns=['first', 'last'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +277,7 @@
        "2        JohnDoe@email.com       John Doe"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +288,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [Corey, Schafer]\n",
+       "1         [Jane, Doe]\n",
+       "2         [John, Doe]\n",
+       "Name: full_name, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# splits full name into first and last name\n",
+    "df['full_name'].str.split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -339,27 +367,29 @@
        "2   John      Doe"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# use expand=True to breakout the list into columns for each value\n",
     "df['full_name'].str.split(' ', expand=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creates new 'first' and 'last' columns\n",
     "df[['first', 'last']] = df['full_name'].str.split(' ', expand=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +452,7 @@
        "2        JohnDoe@email.com       John Doe   John      Doe"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,12 +540,15 @@
     }
    ],
    "source": [
+    "# append() methods adds a single row of data\n",
+    "# ignore_index=True is important to allow this to work\n",
+    "# NaN gets input for any columns that don't get values specified in append\n",
     "df.append({'first': 'Tony'}, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +614,7 @@
        "1  Steve  Rogers      Cap@avenge.com"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -671,28 +704,33 @@
        "4           Cap@avenge.com            NaN  Steve   Rogers"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# appends df2 to df\n",
+    "# ignore_index=True is important so that new indexes are assigned to df2 that is being appended on\n",
+    "# sort will sort column values of new dataframe (sort=False is default)\n",
     "df.append(df2, ignore_index=True, sort=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.append(df2, ignore_index=True, sort=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set df equal to newly created dataframe\n",
+    "# no inplace argument in append method so this must be done\n",
+    "df = df.append(df2, ignore_index=True, sort=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -770,7 +808,7 @@
        "4           Cap@avenge.com            NaN  Steve   Rogers"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -852,12 +890,14 @@
        "3       IronMan@avenge.com            NaN   Tony    Stark"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# drops the 4th index\n",
+    "# if you want this to carry through remember to add the inplace=True argument\n",
     "df.drop(index=4)"
    ]
   },
@@ -932,7 +972,11 @@
     }
    ],
    "source": [
+    "# drops all rows where the last name is Doe\n",
+    "# this could also be done using .loc\n",
     "filt = df['last'] == 'Doe'\n",
+    "\n",
+    "# use .index to get the index values of that filter\n",
     "df.drop(index=df[filt].index)"
    ]
   },
@@ -960,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
