--- a/Python/Pandas/07-Sorting-Data/Snippets.ipynb
+++ b/Python/Pandas/07-Sorting-Data/Snippets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "3   Adam      Doe              A@email.com"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,18 +176,19 @@
        "3   Adam      Doe              A@email.com"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# sorts values by last name in descending order\n",
     "df.sort_values(by='last', ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,12 +254,13 @@
        "3   Adam      Doe              A@email.com"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# can sort on multiple columns\n",
     "df.sort_values(by=['last', 'first'], ascending=False)"
    ]
   },
@@ -268,6 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# using a list to specify multiple sorting options on multiple columns\n",
     "df.sort_values(by=['last', 'first'], ascending=[False, True], inplace=True)"
    ]
   },
@@ -350,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -387,6 +390,12 @@
        "      <td>CoreyMSchafer@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adam</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>A@email.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Jane</td>\n",
        "      <td>Doe</td>\n",
@@ -398,12 +407,6 @@
        "      <td>Doe</td>\n",
        "      <td>JohnDoe@email.com</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Adam</td>\n",
-       "      <td>Doe</td>\n",
-       "      <td>A@email.com</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -411,23 +414,25 @@
       "text/plain": [
        "   first     last                    email\n",
        "0  Corey  Schafer  CoreyMSchafer@gmail.com\n",
+       "3   Adam      Doe              A@email.com\n",
        "1   Jane      Doe        JaneDoe@email.com\n",
-       "2   John      Doe        JohnDoe@email.com\n",
-       "3   Adam      Doe              A@email.com"
+       "2   John      Doe        JohnDoe@email.com"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# index gets re-sorted/reset to align with where the row is in the dataframe\n",
+    "# can use inplace=True argument if you want this to carry through\n",
     "df.sort_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -440,12 +445,13 @@
        "Name: last, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# sorts values of 'last' col in ascending order\n",
     "df['last'].sort_values()"
    ]
   },
@@ -473,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
