--- a/Python/Pandas/09-Cleaning-Data/Snippets.ipynb
+++ b/Python/Pandas/09-Cleaning-Data/Snippets.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# adding some None vaules and NaN (aka missing data)\n",
     "people = {\n",
     "    'first': ['Corey', 'Jane', 'John', 'Chris', np.nan, None, 'NA'], \n",
     "    'last': ['Schafer', 'Doe', 'Doe', 'Schafer', np.nan, np.nan, 'Missing'], \n",
@@ -26,19 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame(people)\n",
     "\n",
+    "# replace str missing values with a proper NaN value so that it can be recognized by dropna()\n",
     "df.replace('NA', np.nan, inplace=True)\n",
     "df.replace('Missing', np.nan, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +135,7 @@
        "6    NaN      NaN                      NaN   NaN"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,18 +209,19 @@
        "2   John      Doe        JohnDoe@email.com  63"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# drops any rows that have missing values\n",
     "df.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -297,12 +300,17 @@
        "5   None      NaN      Anonymous@email.com  None"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# axis - what to drop when there are missing values (index or columns)\n",
+    "# how - criteria for dropping (default → 'any') vs 'all' only drops when all the values along axis are missing\n",
+    "\n",
+    "# drops anyone with missing values in both last name AND email (this is due to how='all')\n",
+    "# to permanently change df also pass in inplace=True\n",
     "df.dropna(axis='index', how='all', subset=['last', 'email'])"
    ]
   },
@@ -409,6 +417,7 @@
     }
    ],
    "source": [
+    "# applies a mask to show na values\n",
     "df.isna()"
    ]
   },
@@ -515,6 +524,7 @@
     }
    ],
    "source": [
+    "# fillna() replaces na values with an input\n",
     "df.fillna(0)"
    ]
   },
@@ -539,6 +549,8 @@
     }
    ],
    "source": [
+    "# checks datatype of each column in df\n",
+    "# object is usually just some combo of datatypes (strings, ints, etc.)\n",
     "df.dtypes"
    ]
   },
@@ -572,6 +584,8 @@
     }
    ],
    "source": [
+    "# this will give an error due to multiple data types\n",
+    "# np.nan is a float\n",
     "df['age'].mean()"
    ]
   },
@@ -581,6 +595,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# casts all values in age column to floats\n",
+    "# casting to int wont work because of NaN values\n",
     "df['age'] = df['age'].astype(float)"
    ]
   },
@@ -633,7 +649,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df.astype(<datatype>) is a way to convert an entire dataframe to a certain data type"
+   ]
   }
  ],
  "metadata": {
@@ -652,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
