--- a/Python/Pandas/11-Import-Export/Pandas-Demo.ipynb
+++ b/Python/Pandas/11-Import-Export/Pandas-Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/survey_results_public.csv', index_col='Respondent')\n",
-    "schema_df = pd.read_csv('data/survey_results_schema.csv', index_col='Column')"
+    "# read data using read_csv() method\n",
+    "df = pd.read_csv('../data/survey_results_public.csv', index_col='Respondent')\n",
+    "schema_df = pd.read_csv('../data/survey_results_schema.csv', index_col='Column')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2099,7 @@
        "65          Appropriate in length  Neither easy nor difficult  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,29 +2112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "india_df.to_csv('data/modified.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "india_df.to_csv('data/modified.tsv', sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "india_df.to_excel('data/modified.xlsx')"
+    "# writes df to_csv()\n",
+    "india_df.to_csv('../data/modified.csv')"
    ]
   },
   {
@@ -2142,12 +2126,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_excel('data/modified.xlsx', index_col='Respondent')"
+    "# write to tab deliminated file by specifying .tsv in filename, and a tab seperator\n",
+    "india_df.to_csv('../data/modified.tsv', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# will need to install below packages for interacting with excel files (conda already has these packages):\n",
+    "# xlwt - write to older excel format\n",
+    "# openpyxl - write to newer excel format\n",
+    "# xlrd - read excel files\n",
+    "\n",
+    "# write to excel file\n",
+    "india_df.to_excel('../data/modified.xlsx')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reads in excel file and specifies the 'Respondent' col to be used as the df index\n",
+    "test = pd.read_excel('../data/modified.xlsx', index_col='Respondent')\n",
+    "type(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3185,21 +3207,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "india_df.to_json('data/modified.json', orient='records', lines=True)"
+    "# send df to json file\n",
+    "# orient='records', lines=True makes the .json list like and puts every new record on its own line (easier to read)\n",
+    "india_df.to_json('../data/modified.json', orient='records', lines=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# read .json file\n",
+    "# orient and lines arguments may have to be changes depending on how .json data looks\n",
     "test = pd.read_json('data/modified.json', orient='records', lines=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4084,17 +4110,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'psycopg2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3228/4287300311.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# sqlalchemy is a popular ORM (object relational mapper) for connecting to databases\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msqlalchemy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpsycopg2\u001b[0m \u001b[0;31m# allows sqlalchemy to work with postgres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'psycopg2'"
+     ]
+    }
+   ],
    "source": [
+    "# sqlalchemy is a popular ORM (object relational mapper) for connecting to databases\n",
     "from sqlalchemy import create_engine\n",
-    "import psycopg2"
+    "import psycopg2 # allows sqlalchemy to work with postgres"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4103,7 +4142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4112,7 +4151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4121,7 +4160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5155,7 +5194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5164,7 +5203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6198,7 +6237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6207,7 +6246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6320,7 +6359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
